tls-demo/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-tls-deployment
  namespace: ingress-tls-demo
  labels:
    app: webserver-tls
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver-tls
  template:
    metadata:
      labels:
        app: webserver-tls
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: webapp-tls-demo
  namespace: ingress-tls-demo
spec:
  selector:
    app: webserver-tls
  ports:
  - protocol: TCP
    port: 80                                    #映射到集群内部IP(cluster ip)的监听端口是80
    targetPort: 80                              #容器内服务本身的端口80  
  type: NodePort
