tls-demo/ingress-webserver-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-webserver-tls
  namespace: ingress-tls-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - che.webserver.com
    secretName: webserver-tls-secret
  rules:
  - host: che.webserver.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp-tls-demo
          servicePort: 80
